--- a/register.html
+++ b/register.html
@@ -7,12 +7,10 @@
     <form name="login" id="frm-login">
       <label>username: </label><input id="username" type="text" placeholder="enter username">
       <label>password: </label><input id="password" type="password" placeholder="enter password">
+      <label>repeat password: </label><input id="rpt-password" type="password" placeholder="enter password">
       <input type="submit" value="login">
       <input type="reset" value="reset">
     </form>
-  </div>
-  <div id="dv-forgot">
-    <a id="a-forgot" href="">forgot password</a>
   </div>
 </body>
 </html>
