--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
+  <meta charset="utf-8">
   <title></title>
+  <script src="javascript/user.js"></script>
+  <script src="javascript/util.js"></script>
 </head>
 <body>
   <div id="dv-form">
-    <form name="login" id="frm-login">
+    <form onsubmit="doLogin();return false;" name="login" id="frm-login">
       <label>username: </label><input id="username" type="text" placeholder="enter username">
       <label>password: </label><input id="password" type="password" placeholder="enter password">
       <input type="submit" value="login">
