--- a/listing.html
+++ b/listing.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <meta charset="utf-8">
+  <title>Listing Page</title>
+  <script src="javascript/util.js"></script>
+  <script src="javascript/listings.js"></script>
 </head>
-<body>
-
+<body onload="startListingPage();">
+  <div id="div-listings"></div>
 </body>
 </html>
