--- a/listing.html
+++ b/listing.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Listing Page</title>
+  <link rel="stylesheet" href="css/main.css">
   <script src="javascript/util.js"></script>
   <script src="javascript/listings.js"></script>
 </head>
 <body onload="startListingPage();">
+  <div id="dv-header">
+    <div id="dv-tagline">Something here</div>
+    <div id="dv-logout"><a href="" id="a-logout" onclick="logout(); return false;">logout</a></div>
+  </div>
   <div id="div-listings"></div>
 </body>
 </html>
