--- a/listing.html
+++ b/listing.html
@@ -4,14 +4,30 @@
   <meta charset="utf-8">
   <title>Listing Page</title>
   <link rel="stylesheet" href="css/main.css">
+  <script src="javascript/authenticate.js"></script>
   <script src="javascript/util.js"></script>
   <script src="javascript/listings.js"></script>
+  <script src="javascript/topic.js"></script>
+  <script src="javascript/vote.js"></script>
 </head>
 <body onload="startListingPage();">
   <div id="dv-header">
     <div id="dv-tagline">Something here</div>
     <div id="dv-logout"><a href="" id="a-logout" onclick="logout(); return false;">logout</a></div>
   </div>
-  <div id="div-listings"></div>
+  <div id="dv-listing-header">
+  </div>
+  <div id="dv-listings"></div>
+  <div id="dv-listing-create"><a href="" onclick="showNewListingForm();return false;">create topic</a></div>
+  <div id="dv-new-listing">
+    <form onsubmit="doNewListing();return false;" name="newListing" id="frm-new-listing">
+      <span class="spn_spacer" />
+      <input class="frm_inptText" id="npt-topic-name" type="text" placeholder="topic name" value="">
+      <span class="spn_spacer" />
+      <input class="frm_inptText" id="npt-topic-desc" type="text" placeholder="description" value="">
+      <input class="frm_submit_btn" id="frm-submit" type="submit" value="create">
+      <input class="frm_cancel_btn" id="frm-cancel" type="button" value="cancel" onclick="cancelNewListingForm();">
+    </form>
+  </div>
 </body>
 </html>
