--- a/topic.html
+++ b/topic.html
@@ -7,20 +7,26 @@
   <script src="javascript/authenticate.js"></script>
   <script src="javascript/util.js"></script>
   <script src="javascript/topic.js"></script>
+  <script src="javascript/user.js"></script>
   <script src="javascript/comment.js"></script>
   <script src="javascript/vote.js"></script>
 </head>
 <body onload="startTopicPage();">
   <div id="dv-header">
-    <div id="dv-tagline">Something here</div>
+    <div id="dv-tagline"><a href="listing.html">Something here</a></div>
     <div id="dv-logout"><a href="" id="a-logout" onclick="logout(); return false;">logout</a></div>
   </div>
-  <div><a href="listing.html">back to listing</a></div>
   <div id="dv-topic-header">
     <div id="dv-topic-title"></div>
     <div id="dv-topic-vote"></div><a href="" class="voteBtn" id="dv-topic-vote-btn">+</a>
   </div>
   <div id="dv-topic-desc"></div>
+  <a href="" id="a-edit-topic-message">Edit<a>
+  <div id="dv-edit-topic">
+    <textarea id="ta-topic-message" rows="3" cols="60"></textarea>
+    <input class="frm_submit_btn" id="frm-topic-submit" type="submit" value="update">
+    <input class="frm_cancel_btn" id="frm-topic-cancel" type="button" value="cancel" onclick="cancelUpdateTopic);">
+  </div>
   <div id="dv-topic-footer"></div>
   <div id="dv-comments-header">Comments</div>
   <div id="dv-comment-box">
