--- a/user.html
+++ b/user.html
@@ -2,10 +2,34 @@
 <head>
   <meta charset="utf-8">
   <title>user</title>
+  <link rel="stylesheet" href="css/main.css">
+  <script src="javascript/authenticate.js"></script>
   <script src="javascript/user.js"></script>
+  <script src="javascript/util.js"></script>
 </head>
-<body>
-hello user
-
+<body onload="startUserPage();">
+  <div id="dv-header">
+    <div id="dv-tagline"><a href="listing.html">Something here</a></div>
+    <div id="dv-logout"><a href="" id="a-logout" onclick="logout(); return false;">logout</a></div>
+  </div>
+  <div id="dv-user-info">
+    <div id="dv-user-id"></div>
+    <div id="dv-user-email"></div>
+    <div id="dv-user-firstName"></div>
+    <div id="dv-user-lastName"></div>
+    <div id="dv-user-update">
+      <a href="" id="a-user-update">update</a>
+    </div>
+  </div>
+  <div id="dv-user-form">
+    <form id="frm-user-update">
+      <input type="text" id="npt-user-email" value="" placeholder="email">
+      <input type="text" id="npt-user-firstName" value="" placeholder="first name">
+      <input type="text" id="npt-user-lastName" value="" placeholder="last name">
+      <input class="frm_submit_btn" id="frm-user-submit" type="submit" value="update">
+      <input class="frm_cancel_btn" id="frm-user-cancel" type="button" value="cancel" onclick="cancelUserForm();">
+    </form>
+  </div>
+  <div id="dv-error-message"></div>
 </body>
 </html>
