--- a/register.html
+++ b/register.html
@@ -7,17 +7,24 @@
   <script src="javascript/user.js"></script>
 </head>
 <body>
-  <div id="dv-form">
-    <form onsubmit="doRegister();return false;" name="login" id="frm-login">
-      <label class="frm_labels" id="lbl_username">username: </label><input class="frm_inptText" id="username" type="text" placeholder="email" value="tester@email.com">
-      <label class="frm_labels" id="lbl_password1">password: </label><input class="frm_passField" id="password" type="password" placeholder="password" value="Pass1word">
-      <label class="frm_labels" id="lbl_password2">repeat password: </label><input class="frm_passField" id="rpt-password" type="password" placeholder="repeat password" value="Pass1word">
-      <label class="frm_labels" id="lbl_firstName">first name: </label><input class="frm_inptText" id="firstName" type="text" placeholder="first name" value="John">
-      <label class="frm_labels" id="lbl_lastName">last name: </label><input class="frm_inptText" id="lastName" type="text" placeholder="last name" value="Doe">
-      <input class="frm_submit_btn" id="frm_submit" type="submit" value="register">
-      <input class="frm_reset_btn" id="frm_reset" type="reset" value="reset">
-    </form>
+  <form onsubmit="doRegister();return false;" name="login" id="frm-login">
+  <div class="aGrid" id="register-page">
+    <div class="aGrid" id="dv-header">
+      <div id="dv-tagline"><a href="index.html">vanilla javascript historia</a></div>
+      <div id="dv-logout"></div>
+    </div>
+    <div class="aGrid" id="dv-reg-form">
+      <label class="frm_labels" id="lbl_reg_username">username: </label><input class="frm_inptText" id="npt-reg-username" type="text" placeholder="email">
+      <label class="frm_labels" id="lbl_reg_password1">password: </label><input class="frm_passField" id="npt-reg-password" type="password" placeholder="password">
+      <label class="frm_labels" id="lbl_reg_password2">repeat password: </label><input class="frm_passField" id="rpt-reg-password" type="password" placeholder="repeat password">
+      <label class="frm_labels" id="lbl_reg_firstName">first name: </label><input class="frm_inptText" id="npt-reg-firstName" type="text" placeholder="first name">
+      <label class="frm_labels" id="lbl_reg_lastName">last name: </label><input class="frm_inptText" id="npt-reg-lastName" type="text" placeholder="last name">
+      <input class="frm_submit_btn" id="frm-reg-submit" type="submit" value="register">
+      <input class="frm_reset_btn" id="frm-reg-reset" type="reset" value="reset">
+    </div>
+    <div id="div-error-message"></div>
+    <div><a href="index.html">cancel</a></div>
   </div>
-  <div><a href="index.html">cancel</a></div>
+  </form>
 </body>
 </html>
