--- a/listing.html
+++ b/listing.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="javascript/authenticate.js"></script>
   <script src="javascript/util.js"></script>
+  <script src="javascript/listingsObj.js"></script>
   <script src="javascript/listings.js"></script>
+  <script src="javascript/topicObj.js"></script>
   <script src="javascript/topic.js"></script>
   <script src="javascript/vote.js"></script>
 </head>
@@ -17,15 +19,17 @@
     <div id="dv-tagline">vanilla javascript historia</div>
     <div id="dv-logout"><a href="" id="a-logout" onclick="logout(); return false;">logout</a></div>
   </div>
-  <div id="dv-listing-header">Topics</div>
+  <div class="aGrid" id="dv-listing-header">
+    <div id="dv-listing-title">Topics</div>
+    <div id="dv-listing-create"><a href="" class="flatButtons" onclick="showNewListingForm();return false;">create topic</a></div>
+  </div>
   <div class="aGrid" id="dv-listings"></div>
-  <div id="dv-listing-create"><a href="" onclick="showNewListingForm();return false;">create topic</a></div>
   <div id="div-error-message"></div>
   <div class="aGrid" id="dv-new-listing">
-      <input class="frm_inptText" id="npt-topic-name" type="text" placeholder="topic name" value="">
+      <input class="frm_inptText" id="npt-list-topic-name" type="text" placeholder="topic name" value="">
       <input class="frm_inptText" id="npt-topic-desc" type="text" placeholder="description" value="">
-      <input class="frm_cancel_btn" id="frm-listing-cancel" type="button" value="cancel">
-      <input class="frm_submit_btn" id="frm-listing-submit" type="submit" value="create">
+      <input class="smlCntr" id="frm-listing-cancel" type="button" value="cancel">
+      <input class="smlCntr" id="frm-listing-submit" type="submit" value="create">
   </div>
 </div>
 </form>
