--- a/register.html
+++ b/register.html
@@ -4,7 +4,8 @@
   <title>Registration</title>
   <link rel="stylesheet" href="css/main.css">
   <script src="javascript/util.js"></script>
-  <script src="javascript/user.js"></script>
+  <script src="javascript/userObj.js"></script>
+  <script src="javascript/regCntrlr.js"></script>
 </head>
 <body>
   <form onsubmit="doRegister();return false;" name="login" id="frm-login">
@@ -19,8 +20,8 @@
       <label class="frm_labels" id="lbl_reg_password2">repeat password: </label><input class="frm_passField" id="rpt-reg-password" type="password" placeholder="repeat password">
       <label class="frm_labels" id="lbl_reg_firstName">first name: </label><input class="frm_inptText" id="npt-reg-firstName" type="text" placeholder="first name">
       <label class="frm_labels" id="lbl_reg_lastName">last name: </label><input class="frm_inptText" id="npt-reg-lastName" type="text" placeholder="last name">
-      <input class="frm_submit_btn" id="frm-reg-submit" type="submit" value="register">
-      <input class="frm_reset_btn" id="frm-reg-reset" type="reset" value="reset">
+      <input class="smlCntr" id="frm-reg-submit" type="submit" value="register">
+      <input class="smlCntr" id="frm-reg-reset" type="reset" value="reset">
     </div>
     <div id="div-error-message"></div>
     <div><a href="index.html">cancel</a></div>
