still have a bug if you jump press update after update

--- a/topic.html
+++ b/topic.html
@@ -9,7 +9,6 @@
   <script src="javascript/topicObj.js"></script>
   <script src="javascript/topic.js"></script>
   <script src="javascript/userObj.js"></script>
-  <script src="javascript/user.js"></script>
   <script src="javascript/commentObj.js"></script>
   <script src="javascript/vote.js"></script>
 </head>
@@ -46,7 +45,7 @@
     <div class="aGrid" id="dv-new-comment">
       <textarea class="frm_inptTextArea" id="npt-comment" placeholder="comment" rows="3" cols="60"></textarea>
       <input class="smlCntr" id="frm-comment-submit" type="submit" value="create">
-      <input class="smlCntr" id="frm-comment-cancel" type="button" value="cancel" onclick="cancelNewCommentForm();">
+      <input class="smlCntr" id="frm-comment-cancel" type="button" value="cancel">
     </div>
     <div id="dv-comments-footer"></div>
   </div>
