--- a/user.html
+++ b/user.html
@@ -13,7 +13,7 @@
   <div class="aGrid" id="user-page">
   <div class="aGrid" id="dv-header">
     <div id="dv-tagline"><a href="listing.html">vanilla javascript historia</a></div>
-    <div id="dv-logout"><a href="" id="a-logout" onclick="logout(); return false;">logout</a></div>
+    <div id="dv-logout"><a href="" class="flatButtons" id="a-logout" onclick="logout(); return false;">logout</a></div>
   </div>
   <div class="aGrid" id="dv-user-info">
     <div id="dv-user-id"></div>
@@ -29,8 +29,8 @@
         <input type="text" id="npt-user-firstName" value="" placeholder="first name">
       <label class="frm_labels" id="lbl-lastname-edt">last name: </label>
         <input type="text" id="npt-user-lastName" value="" placeholder="last name">
-      <input class="smlCntr" id="frm-user-submit" type="submit" value="update">
-      <input class="smlCntr" id="frm-user-cancel" type="button" value="cancel" onclick="cancelUserForm();">
+      <input class="flatButtons" id="frm-user-submit" type="submit" value="update">
+      <input class="flatButtons" id="frm-user-cancel" type="button" value="cancel" onclick="cancelUserForm();">
   </div>
   <div id="dv-error-message"></div>
   </div>
