--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div class="aGrid" id="dv-header">
       <div id="dv-tagline">vanilla javascript historia</div>
       <div id="dv-register">
-        <a id="a-register" href="register.html">register</a>
+        <a class="flatButtons" id="a-register" href="register.html">register</a>
       </div>
     </div>
-    <div id="div-error-message"></div>
     <div class="aGrid" id="dv-form-login">
         <label class="frm_labels" id="lbl-username">username: </label><input class="frm_inptText" id="npt-username" type="text" placeholder="email">
         <label class="frm_labels" id="lbl-password">password: </label><input class="frm_passField" id="npt-password" type="password" placeholder="password">
-        <input class="smlCntr" id="frm-login-submit" type="submit" value="login">
-        <input class="smlCntr" id="frm-login-reset" type="reset" value="reset">
+        <input class="smlCntr flatButtons" id="frm-login-submit" type="submit" value="login">
+        <input class="smlCntr flatButtons" id="frm-login-reset" type="reset" value="reset">
     </div>
+    <div id="div-error-message"></div>
     <div id="dv-forgot">
       <a id="a-forgot" href="">forgot password</a>
     </div>
