--- a/listing.html
+++ b/listing.html
@@ -17,20 +17,20 @@
 <div class="aGrid" id="listing-page">
   <div class="aGrid" id="dv-header">
     <div id="dv-tagline">vanilla javascript historia</div>
-    <div id="dv-logout"><a href="" id="a-logout" onclick="logout(); return false;">logout</a></div>
+    <div id="dv-logout"><a href="" class="flatButtons" id="a-logout" onclick="logout(); return false;">logout</a></div>
   </div>
   <div class="aGrid" id="dv-listing-header">
     <div id="dv-listing-title">Topics</div>
     <div id="dv-listing-create"><a href="" class="flatButtons" onclick="showNewListingForm();return false;">create topic</a></div>
   </div>
-  <div class="aGrid" id="dv-listings"></div>
-  <div id="div-error-message"></div>
   <div class="aGrid" id="dv-new-listing">
       <input class="frm_inptText" id="npt-list-topic-name" type="text" placeholder="topic name" value="">
       <input class="frm_inptText" id="npt-topic-desc" type="text" placeholder="description" value="">
-      <input class="smlCntr" id="frm-listing-cancel" type="button" value="cancel">
-      <input class="smlCntr" id="frm-listing-submit" type="submit" value="create">
+      <input class="flatButtons" id="frm-listing-cancel" type="button" value="cancel">
+      <input class="flatButtons" id="frm-listing-submit" type="submit" value="create">
   </div>
+  <div id="div-error-message"></div>
+  <div class="aGrid" id="dv-listings"></div>
 </div>
 </form>
 </body>
