--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
   <div class="aGrid" id="register-page">
     <div class="aGrid" id="dv-header">
       <div id="dv-tagline"><a href="index.html">vanilla javascript historia</a></div>
-      <div id="dv-logout"></div>
+      <div id="dv-logout"><a class="flatButtons" href="index.html">cancel</a></div>
     </div>
     <div class="aGrid" id="dv-reg-form">
       <label class="frm_labels" id="lbl_reg_username">username: </label><input class="frm_inptText" id="npt-reg-username" type="text" placeholder="email">
@@ -20,11 +20,11 @@
       <label class="frm_labels" id="lbl_reg_password2">repeat password: </label><input class="frm_passField" id="rpt-reg-password" type="password" placeholder="repeat password">
       <label class="frm_labels" id="lbl_reg_firstName">first name: </label><input class="frm_inptText" id="npt-reg-firstName" type="text" placeholder="first name">
       <label class="frm_labels" id="lbl_reg_lastName">last name: </label><input class="frm_inptText" id="npt-reg-lastName" type="text" placeholder="last name">
-      <input class="smlCntr" id="frm-reg-submit" type="submit" value="register">
-      <input class="smlCntr" id="frm-reg-reset" type="reset" value="reset">
+      <input class="flatButtons" id="frm-reg-submit" type="submit" value="register">
+      <input class="flatButtons" id="frm-reg-reset" type="reset" value="reset">
     </div>
     <div id="div-error-message"></div>
-    <div><a href="index.html">cancel</a></div>
+
   </div>
   </form>
 </body>
