--- a/topic.html
+++ b/topic.html
@@ -17,7 +17,7 @@
   <div class="aGrid" id="topic-page">
     <div class="aGrid" id="dv-header">
       <div id="dv-tagline"><a href="listing.html">vanilla javascript historia</a></div>
-      <div id="dv-logout"><a href="" id="a-logout" onclick="logout(); return false;">logout</a></div>
+      <div id="dv-logout"><a href="" class="flatButtons" id="a-logout" onclick="logout(); return false;">logout</a></div>
     </div>
     <div id="div-error-message"></div>
     <div class="aGrid" id="dv-topic">
@@ -44,8 +44,8 @@
     </div>
     <div class="aGrid" id="dv-new-comment">
       <textarea class="frm_inptTextArea" id="npt-comment" placeholder="comment" rows="3" cols="60"></textarea>
-      <input class="smlCntr" id="frm-comment-submit" type="submit" value="create">
-      <input class="smlCntr" id="frm-comment-cancel" type="button" value="cancel">
+      <input class="flatButtons" id="frm-comment-submit" type="submit" value="create">
+      <input class="flatButtons" id="frm-comment-cancel" type="button" value="cancel">
     </div>
     <div id="dv-comments-footer"></div>
   </div>
