starting to work on mobile compatibility

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Site</title>
   <link rel="stylesheet" href="css/main.css">
   <script src="javascript/userObj.js"></script>
@@ -19,8 +21,7 @@
     <div class="aGrid" id="dv-form-login">
         <label class="frm_labels" id="lbl-username">username: </label><input class="frm_inptText" id="npt-username" type="text" placeholder="email">
         <label class="frm_labels" id="lbl-password">password: </label><input class="frm_passField" id="npt-password" type="password" placeholder="password">
-        <input class="smlCntr flatButtons" id="frm-login-submit" type="submit" value="login">
-        <input class="smlCntr flatButtons" id="frm-login-reset" type="reset" value="reset">
+        <input class="flatButtons" id="frm-login-submit" type="submit" value="login">
     </div>
     <div id="div-error-message"></div>
     <div id="dv-forgot">
