--- a/user.html
+++ b/user.html
@@ -1,13 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>user</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>User Page</title>
   <link rel="stylesheet" href="css/main.css">
   <script src="javascript/authenticate.js"></script>
   <script src="javascript/userObj.js"></script>
   <script src="javascript/userCntrlr.js"></script>
-  <script src="javascript/util.js"></script>
 </head>
+  <script src="javascript/util.js"></script>
 <body onload="startUserPage();">
   <form id="frm-user-update">
   <div class="aGrid" id="user-page">
